@@ -1,4 +1,5 @@
 Version 0.9-6 (2015-xx-xx)
+  * OPTICS: fixed second bug reported by Di Pang
 
 Version 0.9-5 (2015-10-04)
   * OPTICS: fixed bug with first observation reported by Di Pang
